adding some exceptions

--- a/generator/templates/api-class.mustache
+++ b/generator/templates/api-class.mustache
@@ -25,7 +25,10 @@ class {{className}}{
         {{/requestBody}}
         config.bodyContentType = {{{requestBodyContentType}}};
         return client.request(config).then((response){
-            return {{returnType}}.fromMap(response);
+            if(response.statusCode == 200){
+                return {{returnType}}.fromMap(response.mappedBody);
+            }
+            throw Exception(response.mappedBody);
         });
     }
     {{/methods}}
