removing lint warnings/hints

--- a/generator/templates/api-class.mustache
+++ b/generator/templates/api-class.mustache
@@ -4,8 +4,9 @@ import '../{{type}}/{{filename}}.dart';
 {{/imports}}
 class {{className}}{
     {{#methods}}
-    
-    /// {{{description}}}
+    {{#description}}
+    /// {{.}}
+    {{/description}}
     static Future<{{returnType}}> {{methodName}} (
         HttpClient client,
         {{#parameters}}
