--- a/generator/templates/bitmask-enum.mustache
+++ b/generator/templates/bitmask-enum.mustache
@@ -28,8 +28,15 @@ class {{className}} {
     }
 
     @override
-    bool operator == (dynamic other) {
-        return other.value == value || other == value;
+    bool operator ==(dynamic other) {
+        if(other is int){
+            return other == value;
+        }
+        try{
+        return value == other.value;
+        }catch(e){
+            return other == this;
+        }
     }
 
     @override
